--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 :root {
   --background-color: #FFF5ED;
   --blue-primary: #001640;
-  --pink-accent:  #FD96A0;
-  --base:  'Lora', serif;
+  --pink-accent: #FD96A0;
+  --base: 'Lora', serif;
   --header: 'Playfair Display', serif;
 }
 
@@ -13,48 +13,24 @@ body {
   margin: 0;
   width: 100%;
   scroll-behavior: smooth;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: var(--header);
   color: var(--blue-primary);
 }
 
 h1 {
   font-size: 64px;
-}
-
-.p-bold-text {
-  font-weight: bold;
-  font-size: 24px;
-}
-.color-separator {
-  color: var(--pink-accent);
-}
-
-.hero-image {
-  max-width: 800px;
-  width: 70%;
-}
-
-.hero-image svg {
-  max-width: 100%;
-  height: auto;
-  overflow: visible;
-}
-
-path.steam-animation {
-  animation: mover 1s infinite alternate;
-}
-
-@keyframes mover {
-  0% { transform: translateY(0); }
-  100% { transform: translateY(-10px); }
 }
 
 .main-wrapper {
@@ -64,12 +40,12 @@ path.steam-animation {
 }
 
 .image-container {
-/*  opacity: 1;*/
+  /*  opacity: 1;*/
   background-color: var(--background-color);
   position: fixed;
   height: 100vh;
   top: 0;
-  padding-bottom: 50px;
+  padding-bottom: 100px;
   left: 0px;
   width: 100%;
   z-index: -1;
@@ -79,8 +55,81 @@ path.steam-animation {
   align-items: center;
 }
 
+.p-bold-text {
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.color-separator {
+  color: var(--pink-accent);
+}
+
+.hero-image {
+  max-width: 1200px;
+  width: 70%;
+  margin-bottom: -200px;
+}
+
+.hero-image svg {
+  max-width: 100%;
+  height: auto;
+  overflow: visible;
+}
+
+path.steam-animation {
+  animation: bounce 1s infinite alternate;
+}
+
+path.arrow-down {
+  animation: mover 1s infinite alternate;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
+}
+
+@keyframes mover {
+    20%, 100% {
+    transform: translateY(-10px);
+  }
+}
+
 .text-header-container {
   text-align: center;
+}
+.arrow-container {
+  background-color: white;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -60px;
+  margin-bottom: 2.5rem;
+}
+
+.arrow-container svg {
+  overflow: visible;
+}
+
+/*start of content */
+.content-container {
+  margin-top: 90vh;
+  padding: 0em 2.5em 8em 2.5em;
+  padding-bottom: 2.5rem;
+  background-color: white;
+  border-radius: 40px;
+  box-shadow: 0px 4px 108px rgba(253, 150, 160, 0.15);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #avatar {
@@ -96,16 +145,6 @@ h2 {
   text-align: center;
 }
 
-.content-container {
-  margin-top: 90vh;
-  padding: 5em 2.5em 8em 2.5em;
-  padding-bottom: 2.5rem;
-  background-color: white;
-  border-radius: 40px;
-  box-shadow: 0px 4px 108px
-    rgba(253, 150, 160, 0.15);
-}
-
 .body-container {
   padding-bottom: 2.5rem;
 }
@@ -117,9 +156,28 @@ h2 {
   margin: 0;
 }
 
-.project-container  {
-/*  display: flex;
-  justify-content: center;*/
+.about-me-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr [col-start]);
+  grid-column-gap: 1rem;
+}
+
+.about-me {
+ /* width: 100%;*/
+  grid-column-start: span 3;
+  /* justify-content: center;*/
+  align-items: center;
+  align-self: center;
+}
+
+#avatar {
+  grid-column-start: span 2;
+  /* justify-content: center;*/
+  align-items: center;
+  align-self: center;
+}
+
+.project-container {
   display: grid;
   grid-template-columns: repeat(5, auto [col-start]);
   grid-column-gap: 1rem;
@@ -130,13 +188,13 @@ h2 {
 .project-information {
   width: 100%;
   grid-column-start: span 2;
- /* justify-content: center;*/
+  /* justify-content: center;*/
   align-items: center;
   align-self: center;
 }
 
 .project-card {
-   width: 100%;
+  width: 100%;
   grid-column-start: span 3;
 }
 
@@ -161,11 +219,11 @@ h2 {
 
 #footer {
   position: absolute;
-/*  margin-top:50px;*/
+  /*  margin-top:50px;*/
   bottom: 0;
   width: 100%;
   height: 2.5rem;
-  background-color:  var(--pink-accent);
+  background-color: var(--pink-accent);
 }
 
 /*Phone styles*/
