--- a/main.css
+++ b/main.css
@@ -180,7 +180,7 @@ h2 {
 .project-container {
   display: grid;
   grid-template-columns: repeat(5, auto [col-start]);
-  grid-column-gap: 1rem;
+  grid-column-gap: 3rem;
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
 }
@@ -198,8 +198,16 @@ h2 {
   grid-column-start: span 3;
 }
 
-.carousel-container {
-  background-color: black;
+.carousel-control-prev-icon {
+/*  filter: invert(100%);*/
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23808080' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+  margin-left: -6em;
+  /*color: black;*/
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23d3d3d3' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+  margin-right: -6em;
 }
 
 .project-details {
