--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
   --background-color: #FFF5ED;
   --blue-primary: #001640;
   --pink-accent: #FD96A0;
-  --base: 'Lora', serif;
+  --base: 'Open Sans', sans-serif;
   --header: 'Playfair Display', serif;
 }
 
@@ -57,7 +57,9 @@ h1 {
 
 .p-bold-text {
   font-weight: bold;
-  font-size: 24px;
+  font-size: 18px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 .color-separator {
@@ -65,8 +67,7 @@ h1 {
 }
 
 .hero-image {
-  max-width: 1200px;
-  width: 70%;
+  width: 1000px;
   margin-bottom: -200px;
 }
 
@@ -137,7 +138,7 @@ path.arrow-down {
 }
 
 .profile-img {
-  width: 200px;
+  width: 240px;
   border-radius: 50%;
 }
 
@@ -174,7 +175,7 @@ h2 {
   grid-column-start: span 2;
   /* justify-content: center;*/
   align-items: center;
-  align-self: center;
+  align-self: start;
 }
 
 .project-container {
@@ -234,9 +235,19 @@ h2 {
   background-color: var(--pink-accent);
 }
 
+
+/*Tablet styles*/
+@media (max-width: 750px) {
+  .hero-image {
+    width: 700px;
+    margin-bottom: -140px;
+  }
+}
+
 /*Phone styles*/
 @media (max-width: 450px) {
   .hero-image {
-    width: 90%;
+    width: 500px;
+    margin-bottom: -80px;
   }
 }
