--- a/main.css
+++ b/main.css
@@ -33,6 +33,17 @@ h1 {
   font-size: 64px;
 }
 
+h2 {
+  font-size: 42px;
+  text-align: center;
+}
+
+h5 {
+  font-size: 28px;
+  font-family: var(--base);
+
+}
+
 .main-wrapper {
   max-width: 940px;
   min-height: 100vh;
@@ -142,9 +153,7 @@ path.arrow-down {
   border-radius: 50%;
 }
 
-h2 {
-  text-align: center;
-}
+
 
 .body-container {
   padding-bottom: 2.5rem;
@@ -161,6 +170,7 @@ h2 {
   display: grid;
   grid-template-columns: repeat(5, 1fr [col-start]);
   grid-column-gap: 1rem;
+  padding-top: 20px;
 }
 
 .about-me {
@@ -199,15 +209,16 @@ h2 {
   grid-column-start: span 3;
 }
 
+
+
 .carousel-control-prev-icon {
 /*  filter: invert(100%);*/
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23808080' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23001640' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
   margin-left: -6em;
-  /*color: black;*/
 }
 
 .carousel-control-next-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23d3d3d3' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23001640' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
   margin-right: -6em;
 }
 
@@ -226,15 +237,22 @@ h2 {
   justify-items: center;
 }
 
+.carebook-carousel img {
+  /*max-height: 400px;*/
+}
+
+#p-container {
+  padding-top: 20px;
+}
 #footer {
+  padding-top: 20px;
   position: absolute;
   /*  margin-top:50px;*/
   bottom: 0;
   width: 100%;
-  height: 2.5rem;
-  background-color: var(--pink-accent);
+/*  height: 2.5rem;*/
+ /* background-color: var(--pink-accent);*/
 }
-
 
 /*Tablet styles*/
 @media (max-width: 750px) {
