added contact information

--- a/main.css
+++ b/main.css
@@ -26,7 +26,6 @@ h4,
 h5,
 h6 {
   font-family: var(--header);
-  color: var(--blue-primary);
 }
 
 h1 {
@@ -44,6 +43,13 @@ h5 {
 
 }
 
+a {
+  color: var(--blue-primary);
+}
+a:hover {
+ color: var(--blue-primary);
+}
+
 .main-wrapper {
   max-width: 940px;
   min-height: 100vh;
@@ -51,7 +57,6 @@ h5 {
 }
 
 .image-container {
-  /*  opacity: 1;*/
   background-color: var(--background-color);
   position: fixed;
   height: 100vh;
@@ -100,13 +105,16 @@ path.arrow-down {
   0% {
     transform: translateY(0);
   }
+
   100% {
     transform: translateY(-10px);
   }
 }
 
 @keyframes mover {
-    20%, 100% {
+
+  20%,
+  100% {
     transform: translateY(-10px);
   }
 }
@@ -114,6 +122,7 @@ path.arrow-down {
 .text-header-container {
   text-align: center;
 }
+
 .arrow-container {
   background-color: white;
   width: 120px;
@@ -153,8 +162,6 @@ path.arrow-down {
   border-radius: 50%;
 }
 
-
-
 .body-container {
   padding-bottom: 2.5rem;
 }
@@ -174,16 +181,13 @@ path.arrow-down {
 }
 
 .about-me {
- /* width: 100%;*/
   grid-column-start: span 3;
-  /* justify-content: center;*/
   align-items: center;
   align-self: center;
 }
 
 #avatar {
   grid-column-start: span 2;
-  /* justify-content: center;*/
   align-items: center;
   align-self: start;
 }
@@ -192,8 +196,8 @@ path.arrow-down {
   display: grid;
   grid-template-columns: repeat(5, auto [col-start]);
   grid-column-gap: 3rem;
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .project-information {
@@ -210,16 +214,12 @@ path.arrow-down {
 }
 
 
-
-.carousel-control-prev-icon {
-/*  filter: invert(100%);*/
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23001640' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
-  margin-left: -6em;
+.arrow-next {
+  margin-right: -100px;
 }
 
-.carousel-control-next-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23001640' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
-  margin-right: -6em;
+.arrow-prev {
+  margin-left: -100px;
 }
 
 .project-details {
@@ -237,21 +237,20 @@ path.arrow-down {
   justify-items: center;
 }
 
-.carebook-carousel img {
-  /*max-height: 400px;*/
-}
-
 #p-container {
   padding-top: 20px;
 }
-#footer {
-  padding-top: 20px;
-  position: absolute;
-  /*  margin-top:50px;*/
-  bottom: 0;
+
+#contact-me-header {
+  padding-bottom: 20px;
+}
+
+footer {
+  background-color: var(--background-color);
+  padding: 40px 0 100px;
+  text-align: center;
+  align-items: center;
   width: 100%;
-/*  height: 2.5rem;*/
- /* background-color: var(--pink-accent);*/
 }
 
 /*Tablet styles*/
@@ -260,6 +259,20 @@ path.arrow-down {
     width: 700px;
     margin-bottom: -140px;
   }
+
+  .about-me-container {
+    grid-template-columns: 1fr;
+    padding-top: 20px;
+  }
+
+  .about-me {
+    padding-top: 1rem;
+  }
+
+  .project-container {
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
 }
 
 /*Phone styles*/
@@ -267,5 +280,9 @@ path.arrow-down {
   .hero-image {
     width: 500px;
     margin-bottom: -80px;
+  }
+
+  .project-card {
+    width: 80%;
   }
 }
