--- a/main.css
+++ b/main.css
@@ -297,7 +297,7 @@ footer {
     display: inline-flex;
   }*/
 
-  span.footer-line-separator {
+/*  span.footer-line-separator {
       display: none;
-  }
+  }*/
 }
