--- a/main.css
+++ b/main.css
@@ -45,10 +45,10 @@ h5 {
 
 h6 {
   font-family: var(--base);
-  font-size: 16px;
   color: var(--pink-accent);
-  word-spacing: 2px;
+  font-size: 18px;
   letter-spacing: -1.5px;
+  padding-bottom: 16px;
 }
 
 a {
