japan cycle text

--- a/main.css
+++ b/main.css
@@ -332,6 +332,10 @@ footer {
     width: 80%;
   }
 
+  .classy-project-card {
+
+  }
+
   .footer-icon-link {
     display: inline-flex;
     margin-top: 12px;
