--- a/main.css
+++ b/main.css
@@ -349,6 +349,23 @@ path.arrow-down {
   transition: all .3s ease;
 }
 
+.teacher-life-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 1rem;
+  grid-template-rows: 1fr 1fr auto;
+  grid-row-gap: 1rem;
+  justify-items: center;
+ 
+}
+
+.teaching-bio {
+  grid-column-start: span 2;
+  grid-row-start: span 2;
+  align-items: center;
+  align-self: center;
+}
+
 #p-container {
   padding-top: 20px;
   text-align: center;
